added content and UI to careers page

--- a/careers.html
+++ b/careers.html
@@ -49,62 +49,49 @@ ga('send', 'pageview');
     <main>
       <div class="content">
 	<div id="careers">
-          <h2>careers</h2>
+          <h2>CAREERS</h2>
           <div class="role">
             <p>We are looking for passionate full stack programmers, analysts, designers, data scientists and product managers. You can find detailed job descriptions for each role below.
             <p>GO-JEK has offices in three locations - Jakarta and Jogjakarta in Indonesia and Bangalore in India. If you’re interested in joining us, please email us at <a href="mailto:work@c42.in" class="email">work@go-jek.com</a>
             <h3>what we’re looking for:</h3>
             <p>We’re only fussy about your code and your learnability, really. Experience with ruby is <i>not mandatory</i> to work with us. Take a look at the job description below and drop us a line if you think you fit the bill!
             <br>
-            <h4>junior consultant</h4>
+            <h4>Backend Go-Jek Engineer</h4>
             <ul class="patterns">
-              <li>A passion for programming and solving real business problems through engineering.</li>
-              <li>A strong foundation in at least one object-oriented programming language.</li>
-              <li>The Master says Open source contributions are “most excellent”. Share your github
-profile with us when you apply!</li>
-    </ul>
-    <br>
-    <h4>senior consultant: <span class="italics">in addition to above</span></h4>
-    <ul class="patterns">
-      <li>A strong foundation in object oriented design and architecture.</li>
-      <li>A firm grasp of software engineering principles (including techniques like TDD), with a
-focus on continuous delivery.</li>
-      <li>An excellent command over written and spoken English.</li>
-      <li>Experience engaging with clients, proposing solutions and seeing them through.</li>
-      <li>Enjoys mentoring and coaching.</li>
-    </ul> 
-    <br> 
-    <h4>principal consultant: <span class="italics">in addition to above</span></h4>
-    <ul class="patterns">
-      <li>Deep experience consulting with at a senior level to help improve the pace of delivery
-through software engineering practices.</li>
-      <li>Proficiency across languages, frameworks and technologies.</li>
-      <li>Expertise with polyglot codebases.</li>
-    </ul>
-    <br>
-    <h4>operations manager</h4>
-    <ul class="patterns">
-      <li>Create and maintain financial, cashflow, sales and staffing models.</li>
-      <li>Work closely with the Partners to ensure that they have the right information based on models to make decisions.</li>
-      <li>Alert Partners well in advance when models indicate unexpected cash, cashflow, sales or staffing situations in the future.</li>
-      <li>External customer experience - clients should have a butter smooth experience with invoices raised on time and operational queries responded to in a timely manner.</li>
-      <li>Internal customer experience - employees (internal customers) should have a butter smooth experience with salaries, timesheets, expenses, facilities, meals, perks, etc.</li>
-      <li>Covering the above will require management of: Accounts, Invoicing and Administration of the office.</li>
-    </ul>
-    <br>
-    <h3>what we offer</h3>
-    <ul class="patterns">
-      <li>The flexibility of a start up with the solidity of a mid-sized firm. We have been in the business for over four years and our product has 2,50,000 users across the globe.</li>
-      <li>Plenty of learning on the job.</li>
-      <li>We deeply value work-life balance. Being in crunch mode 24/7 is a no-no.</li>
-      <li>Very competitive salaries commensurate with experience.</li>
-      <li>Lunch and a fully stocked pantry. The Master says, “Pizza for you! With anchovies I presume?”.</li>
-      <li>A comfortable office in the heart of Bangalore, with the all-pervading sweet smell of working code.</li>
-      <li>Hang out with a fun team. Have intelligent conversations about anything, anytime.</li>
-    </ul>]
-</p>
-</div>
-
+              <li>Implement and improve business critical, high performance large scale services</li>
+              <li>Devops and systems</li>
+              <li>Support production</li>
+              <li>Research</li>
+              <li>Minimum qualifications</li>
+              <li>Minimum 2 years server-side development experience</li>
+              <li>Fluency in Linux</li>
+              <li>Familiarity with languages like Ruby, Java, Go</li>
+              <li>Knowledge of SQL and NoSQL databases</li>
+            </ul>
+            <br>
+            <h4>Senior Go-Jek Engineer <i>in addition to above</i></h4>
+            <ul class="patterns">
+              <li>Design and implement business critical, high performance large scale services</li>
+              <li>Building and managing automated build/test/deployment environments</li>
+              <li>Coaching and mentoring talented and highly motivated engineers</li>
+              <li>Working with cross-functional teams to deliver stellar end user experience</li>
+              <li>Working closely with the operations and customer support teams to ensure exceptional uptimes</li>
+              <li>Working with the Product Management Team to validate and plan new features</li>
+              <li>Research new technologies and tools that help in building the next generation of go-jek services</li>
+              <li>Minimum 8 years of relevant development experience</li>
+              <li>Deep knowledge of a server side technology of choice. Deep knowledge of the JVM is a plus</li>
+              <li>Past experience in significant cross-functional engineering efforts</li>
+              <li>Deep knowledge of Linux: CentOS, Fedora, or Ubuntu</li>
+              <li>Experience in designing and maintaining SQL and NoSQL database schema</li>
+              <li>Experience working with high scale distributed systems</li>
+              <li>Ability to lead through uncertainty, chaos and a fast paced development environment</li>
+            </ul>
+            <br>
+            <h3>Job Brief</h3>
+            <ul class="patterns">
+              <li>You will be a part of the System team of highly talented engineers who build, maintain and scale our rapidly expanding infrastructure and ensure the availability, performance and security aspects in the high traffic production loads.</li>
+            </ul>
+          </div>
         </div>
       </div>
     </main>
