updated careers page UI and content. This fixes #3

--- a/careers.html
+++ b/careers.html
@@ -12,10 +12,8 @@
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
 ga('create', 'UA-75323807-1', 'auto');
 ga('send', 'pageview');
-
     </script>
     <meta charset="utf-8">
   </head>
@@ -47,64 +45,68 @@ ga('send', 'pageview');
     </div>
     <div class="top-separator"></div>
     <main>
-      <div class="content">
+      <div class="content container">
 	<div id="careers">
-          <h2>careers</h2>
+          <h1>CAREERS</h1>
           <div class="role">
             <p>We are looking for passionate full stack programmers, analysts, designers, data scientists and product managers. You can find detailed job descriptions for each role below.
             <p>GO-JEK has offices in three locations - Jakarta and Jogjakarta in Indonesia and Bangalore in India. If you’re interested in joining us, please email us at <a href="mailto:work@c42.in" class="email">work@go-jek.com</a>
-            <h3>what we’re looking for:</h3>
-            <p>We’re only fussy about your code and your learnability, really. Experience with ruby is <i>not mandatory</i> to work with us. Take a look at the job description below and drop us a line if you think you fit the bill!
-            <br>
-            <h4>junior consultant</h4>
-            <ul class="patterns">
-              <li>A passion for programming and solving real business problems through engineering.</li>
-              <li>A strong foundation in at least one object-oriented programming language.</li>
-              <li>The Master says Open source contributions are “most excellent”. Share your github
-profile with us when you apply!</li>
-    </ul>
-    <br>
-    <h4>senior consultant: <span class="italics">in addition to above</span></h4>
-    <ul class="patterns">
-      <li>A strong foundation in object oriented design and architecture.</li>
-      <li>A firm grasp of software engineering principles (including techniques like TDD), with a
-focus on continuous delivery.</li>
-      <li>An excellent command over written and spoken English.</li>
-      <li>Experience engaging with clients, proposing solutions and seeing them through.</li>
-      <li>Enjoys mentoring and coaching.</li>
-    </ul> 
-    <br> 
-    <h4>principal consultant: <span class="italics">in addition to above</span></h4>
-    <ul class="patterns">
-      <li>Deep experience consulting with at a senior level to help improve the pace of delivery
-through software engineering practices.</li>
-      <li>Proficiency across languages, frameworks and technologies.</li>
-      <li>Expertise with polyglot codebases.</li>
-    </ul>
-    <br>
-    <h4>operations manager</h4>
-    <ul class="patterns">
-      <li>Create and maintain financial, cashflow, sales and staffing models.</li>
-      <li>Work closely with the Partners to ensure that they have the right information based on models to make decisions.</li>
-      <li>Alert Partners well in advance when models indicate unexpected cash, cashflow, sales or staffing situations in the future.</li>
-      <li>External customer experience - clients should have a butter smooth experience with invoices raised on time and operational queries responded to in a timely manner.</li>
-      <li>Internal customer experience - employees (internal customers) should have a butter smooth experience with salaries, timesheets, expenses, facilities, meals, perks, etc.</li>
-      <li>Covering the above will require management of: Accounts, Invoicing and Administration of the office.</li>
-    </ul>
-    <br>
-    <h3>what we offer</h3>
-    <ul class="patterns">
-      <li>The flexibility of a start up with the solidity of a mid-sized firm. We have been in the business for over four years and our product has 2,50,000 users across the globe.</li>
-      <li>Plenty of learning on the job.</li>
-      <li>We deeply value work-life balance. Being in crunch mode 24/7 is a no-no.</li>
-      <li>Very competitive salaries commensurate with experience.</li>
-      <li>Lunch and a fully stocked pantry. The Master says, “Pizza for you! With anchovies I presume?”.</li>
-      <li>A comfortable office in the heart of Bangalore, with the all-pervading sweet smell of working code.</li>
-      <li>Hang out with a fun team. Have intelligent conversations about anything, anytime.</li>
-    </ul>]
-</p>
-</div>
-
+            <div class="row">
+              <div class="col-md-6">
+                <h4>Backend GO-JEK Engineer</h4>
+                <ul class="patterns">
+                  <li>Implement and improve business critical, high performance large scale services</li>
+                  <li>Devops and systems</li>
+                  <li>Support production</li>
+                  <li>Research</li>
+                  <li>Minimum qualifications</li>
+                  <li>Minimum 2 years server-side development experience</li>
+                  <li>Fluency in Linux</li>
+                  <li>Familiarity with languages like Ruby, Java, Go</li>
+                  <li>Knowledge of SQL and NoSQL databases</li>
+                </ul>
+              </div>
+              <div class="col-md-6">
+                <h4>Senior GO-JEK Engineer</h4>
+                <ul class="patterns">
+                  <li>Design and implement business critical, high performance large scale services</li>
+                  <li>Building and managing automated build/test/deployment environments</li>
+                  <li>Coaching and mentoring talented and highly motivated engineers</li>
+                  <li>Working with cross-functional teams to deliver stellar end user experience</li>
+                  <li>Working closely with the operations and customer support teams to ensure exceptional uptimes</li>
+                  <li>Working with the Product Management Team to validate and plan new features</li>
+                  <li>Research new technologies and tools that help in building the next generation of go-jek services</li>
+                  <li>Minimum 8 years of relevant development experience</li>
+                  <li>Deep knowledge of a server side technology of choice. Deep knowledge of the JVM is a plus</li>
+                  <li>Past experience in significant cross-functional engineering efforts</li>
+                  <li>Deep knowledge of Linux: CentOS, Fedora, or Ubuntu</li>
+                  <li>Experience in designing and maintaining SQL and NoSQL database schema</li>
+                  <li>Experience working with high scale distributed systems</li>
+                  <li>Ability to lead through uncertainty, chaos and a fast paced development environment</li>
+                </ul>
+              </div>
+              <div class="col-md-6">
+                <h4>Dev-Ops GO-JEK Engineer</h4>
+                <ul class="patterns">
+                  <li>Develop and setup software and tool chains that will help end to end evolution and scaling of Gojek products.
+                  <li>Passionate about automation and follow 'Infrastructure as Code'
+                  <li>Monitor and manage the high traffic infrastructure
+                  <li>Proactively setup failover and redundancy to ensure the highest availability of the systems.
+                  <li>Passionate about learning and adopting new technologies.
+                  <li>Periodic support to help in critical production deployments.  
+                  <li>Requirements
+                  <li>Solid experience in UNIX /Linux based environments and scripting skills.
+                  <li>Cloud experience, preferably in GCE
+                  <li>Experience with configuration management software (e.g., ansible, Chef)
+                  <li>Experience with monitoring systems
+                  <li>Networking knowledge of DNS, SSL, TCP/IP etc
+                  <li>In depth knowledge of networking, protocols and kernel parameters</li>
+                  <li>Experience in performance tuning and production ready setups for open source components like (Nginx, JVM, Haproxy, Redis etc).
+                  <li>Understanding  of virtualisation and containerization (e.g., Docker, Kubernetes, etc.)
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
@@ -152,6 +154,3 @@ through software engineering practices.</li>
 
   </body>
 </html>
-
-
-
