collapse not working

--- a/careers.html
+++ b/careers.html
@@ -3,6 +3,7 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/todc-bootstrap.min.css" rel="stylesheet">
     <link href='assets/css/index.css' rel='stylesheet'>
@@ -44,6 +45,10 @@ ga('send', 'pageview');
       </div>
     </div>
     <div class="top-separator"></div>
+
+
+
+
     <main>
       <div class="content container">
 	<div id="careers">
@@ -67,6 +72,9 @@ ga('send', 'pageview');
                 </ul>
               </div>
               <div class="col-md-6">
+
+
+
                 <h4>Senior GO-JEK Engineer</h4>
                 <ul class="patterns">
                   <li>Design and implement business critical, high performance large scale services</li>
@@ -110,6 +118,15 @@ ga('send', 'pageview');
         </div>
       </div>
     </main>
+
+    <h2>Simple Collapsible</h2>
+    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Simple collapsible</button>
+    <div i="demo" class="collapse">
+      <p> Random text...
+    </div>
+
+
+
 
     <footer>
       <div class="container">
