minor UI changes for careers

--- a/careers.html
+++ b/careers.html
@@ -8,9 +8,9 @@
     <link href="assets/css/todc-bootstrap.min.css" rel="stylesheet">
     <link href='assets/css/index.css' rel='stylesheet'>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 
 
@@ -52,22 +52,21 @@ ga('send', 'pageview');
       </div>
     </div>
     <div class="top-separator"></div>
-
-
-
-
     <main>
       <div class="content container">
-	<div id="careers">
+	      <div id="careers">
           <h1>CAREERS</h1>
-          <div class="role">
-            <p>We are looking for passionate full stack programmers, analysts, designers, data scientists and product managers. You can find detailed job descriptions for each role below.
-            <p>GO-JEK has offices in three locations - Jakarta and Jogjakarta in Indonesia and Bangalore in India. If you’re interested in joining us, please email us at <a href="mailto:work@c42.in" class="email">work@go-jek.com</a>
+          <div class="text-center">
+            <div class="heading">
+              <p>We are looking for passionate full stack programmers, analysts, designers, data scientists and product managers. You can find detailed job descriptions for each role below.
+              <p>GO-JEK has offices in three locations - Jakarta and Jogjakarta in Indonesia and Bangalore in India. If you’re interested in joining us, please email us at <a href="mailto:work@go-jek.com" class="email">work@go-jek.com</a>
+            </div
             <br><br>
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-centered">
+                <h2 class="roles">Roles</h2>
                 <div class="container button-padding">
-                  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#Backend">Backend GO-JEK Engineer</button>
+                  <button type="button" class="btn btn-success" data-toggle="collapse" data-target="#Backend">Backend Engineer</button>
                   <div id="Backend" class="collapse">
                     <ul class="patterns">
                       <li>Implement and improve business critical, high performance large scale services</li>
@@ -83,7 +82,7 @@ ga('send', 'pageview');
                   </div>
                 </div>
                 <div class="container button-padding">
-                  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#Senior">Senior GO-JEK Engineer</button>
+                  <button type="button" class="btn btn-success" data-toggle="collapse" data-target="#Senior">Senior Engineer</button>
                   <div id="Senior" class="collapse">
                     <ul class="patterns">
                       <li>Design and implement business critical, high performance large scale services</li>
@@ -104,23 +103,23 @@ ga('send', 'pageview');
                   </div>
                 </div>
                 <div class="container button-padding">
-                  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#DevOps">Dev-Ops GO-JEK Engineer</button>
+                  <button type="button" class="btn btn-success" data-toggle="collapse" data-target="#DevOps">System Engineer</button>
                   <div id="DevOps" class="collapse">
                     <ul class="patterns">
-                      <li>Develop and setup software and tool chains that will help end to end evolution and scaling of Gojek products.
-                      <li>Passionate about automation and follow 'Infrastructure as Code'
-                      <li>Monitor and manage the high traffic infrastructure
-                      <li>Proactively setup failover and redundancy to ensure the highest availability of the systems.
-                      <li>Passionate about learning and adopting new technologies.
-                      <li>Periodic support to help in critical production deployments.  
-                      <li>Solid experience in UNIX /Linux based environments and scripting skills.
-                      <li>Cloud experience, preferably in GCE
-                      <li>Experience with configuration management software (e.g., ansible, Chef)
-                      <li>Experience with monitoring systems
-                      <li>Networking knowledge of DNS, SSL, TCP/IP etc
+                      <li>Develop and setup software and tool chains that will help end to end evolution and scaling of Gojek products.</li>
+                      <li>Passionate about automation and follow 'Infrastructure as Code'</li>
+                      <li>Monitor and manage the high traffic infrastructure</li>
+                      <li>Proactively setup failover and redundancy to ensure the highest availability of the systems.</li>
+                      <li>Passionate about learning and adopting new technologies.</li>
+                      <li>Periodic support to help in critical production deployments.</li>
+                      <li>Solid experience in UNIX /Linux based environments and scripting skills.</li>
+                      <li>Cloud experience, preferably in GCE</li>
+                      <li>Experience with configuration management software (e.g., ansible, Chef)</li>
+                      <li>Experience with monitoring systems</li>
+                      <li>Networking knowledge of DNS, SSL, TCP/IP etc</li>
                       <li>In depth knowledge of networking, protocols and kernel parameters</li>
-                      <li>Experience in performance tuning and production ready setups for open source components like (Nginx, JVM, Haproxy, Redis etc).
-                      <li>Understanding  of virtualisation and containerization (e.g., Docker, Kubernetes, etc.)
+                      <li>Experience in performance tuning and production ready setups for open source components like (Nginx, JVM, Haproxy, Redis etc).</li>
+                      <li>Understanding  of virtualisation and containerization (e.g., Docker, Kubernetes, etc.)</li>
                     </ul>
                   </div>
                 </div>
@@ -130,7 +129,7 @@ ga('send', 'pageview');
         </div>
       </div>
     </main>
-    <footer>
+    <footer class="footer">
       <div class="container">
         <div class="row">
           <div class="col-md-3 footer-menu footer-logo">
@@ -147,19 +146,19 @@ ga('send', 'pageview');
           </div>
           <div class="col-md-3 col-sm-3 col-xs-6 footer-menu">
             <ul>
-              <li><i><b>Find Us On</b></i></li>
+              <li><b>Find Us On</b></li>
               <li><a href="https://twitter.com/GojekTech?lang=id" target="_blank"><i class="fa fa-twitter"></i> Twitter</a></li>
             </ul>
           </div>
           <div class="col-md-3 col-sm-3 col-xs-6 footer-menu download">
             <ul>
               <li>Download GO-JEK App</li>
-              <li> 
+              <li>
                 <a href="https://itunes.apple.com/us/app/go-jek/id944875099?mt=8">
                   <img src="/assets/images/badge-app-store.svg" height="36" width="120" alt="Download on the App Store">
                 </a>
               </li>
-              <li> 
+              <li>
                 <a href="https://play.google.com/store/apps/details?id=com.gojek.app&hl=en">
                   <img src="/assets/images/badge-google-play-bordered.png" height="36" width="120"  alt="Get it on Google Play">
                 </a>
