--- a/careers.html
+++ b/careers.html
@@ -3,6 +3,7 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="icon" type="image/jpg" href="assets/images/favicon.png">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/todc-bootstrap.min.css" rel="stylesheet">
